RESOLVED FIXED275827
[WPE][Qt6] Fix build (add damaging rects to Qt6/WPEPlatform render_buffer implementation)
https://bugs.webkit.org/show_bug.cgi?id=275827
Summary [WPE][Qt6] Fix build (add damaging rects to Qt6/WPEPlatform render_buffer imp...
Nikolas Zimmermann
Reported 2024-06-24 14:39:06 PDT
The Qt6 WPE platform wasn't adapted to the damaging rect addition - fix that.
Attachments
Nikolas Zimmermann
Comment 1 2024-06-24 14:40:05 PDT
EWS
Comment 2 2024-06-28 03:30:12 PDT
Committed 280451@main (93291cb78fa7): <https://commits.webkit.org/280451@main> Reviewed commits have been landed. Closing PR #30127 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.