[WPE][Qt6] Fix build (add damaging rects to Qt6/WPEPlatform render_buffer implementation) https://bugs.webkit.org/show_bug.cgi?id=275827

Unreviewed build fix.

Add recently added damage rects to Qt6/WPEPlatform render_buffer
implementation, and ignore the parameters for now -- just fix the build.

Covered by WPE/Qt6 build.

* Source/WebKit/UIProcess/API/wpe/qt6/WPEViewQtQuick.cpp:
(wpeViewQtQuickRenderBuffer):

Canonical link: https://commits.webkit.org/280451@main